--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "webpack --mode=production"
   },
   "dependencies": {
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
