--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "build": "webpack --mode=production"
   },
   "dependencies": {
+    "@types/react": "^17.0.48",
+    "@types/react-dom": "^17.0.17",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
