--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "markdown-editor",
   "version": "1.0.0",
   "scripts": {
-    "start": "echo 'Hello! package.json'",
+    "start": "webpack serve --mode=development",
     "build": "webpack --mode=production"
   },
   "dependencies": {
     "@types/react": "^17.0.48",
     "@types/react-dom": "^17.0.17",
+    "@types/styled-components": "^5.1.26",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3"
   }
 }
